--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Hello!</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 <body>
     <h1>Hey there!</h1>
+    <img src="demo.jpg"/>
 </body>
 </html>
